# ML-Hackweek

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: api.py  config.py
app/jobs/: job_store.py
app/models/: schemas.py
app/pipeline/: coach_pipeline.py
app/routers/: health.py  jobs.py  upload.py
app/services/: gemini_service.py  pose_service.py  quality_classifier.py  quality_features.py  tts_service.py  video_service.py
static/: app.js  index.html  style.css
train/: generate_data.py  train_quality_model.py
